Restyles content body; fixes weird padding on iPhone

--- a/less/768.less
+++ b/less/768.less
@@ -63,8 +63,10 @@ COLOURS
 .content {
 	max-width: 700px;
 	margin: 0 auto;
+	height: 100%;
+	background: @p3;
 }
-// 11 MAIN 					============================================================================= 
+// 11 MAIN 					=============================================================================
 // 12 COMPLEMENTARY 		============================================================================= 
 // 13 CONTENTINFO 			=============================================================================
 //"Footer"
