--- a/less/style.less
+++ b/less/style.less
@@ -352,6 +352,8 @@ footer {
 		.sans-serif;
 		text-align: center;
 		font-size: 200%;
+		padding: 0;
+		margin: 0;
 		li {
 			border-bottom: 1px solid black;
 			padding-top: .5em;
@@ -373,7 +375,7 @@ footer {
 }
 // 11 MAIN 			=============================================================================
 [role="main"] {
-	background: @basecol;
+	background: @p3;
 	text-align: center;
 	padding-left: .5em;
 	padding-right: .5em;
@@ -524,7 +526,7 @@ visibility : hidden; }
 
 /* 17 TEMPLATE SPECIFICS ============================================================================= */
 //For some reason this MUST be down here
-html, body { width: 100%; }
+html, body { width: 100%; height: 100%; }
 body { 
 	background-color: @p1; 
 	color: @white;
